// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RadioGroup /> an array of strings as options accepts an array of strings as options 1`] = `
<div
  class="field field--inline"
>
  <input
    class="field__input field__input--inline"
    id="field_28"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline"
    for="field_28"
  >
    foo
  </label>
</div>
`;

exports[`<RadioGroup /> renders 1`] = `
<div
  class="field field--inline"
>
  <input
    class="field__input field__input--inline"
    id="field_1"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline"
    for="field_1"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup /> renders with an error 1`] = `
<div
  class="field field--inline field--erroneous"
>
  <input
    aria-labelledby="field_4_label field_4_error"
    class="field__input field__input--inline field__input--erroneous"
    id="field_4"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline field__label--erroneous"
    for="field_4"
    id="field_4_label"
  >
    Foo
  </label>
  <span
    class="field__error"
    id="field_4_error"
    role="alert"
  >
    Oh no!
  </span>
</div>
`;

exports[`<RadioGroup /> renders with help 1`] = `
<div
  class="field field--inline"
>
  <input
    class="field__input field__input--inline"
    id="field_7"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline"
    for="field_7"
  >
    Foo
    <span
      class="field__help"
    >
      Good luck
    </span>
  </label>
</div>
`;

exports[`<RadioGroup /> renders with inline 1`] = `
<div
  class="field field--inline"
>
  <input
    class="field__input field__input--inline"
    id="field_22"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline"
    for="field_22"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup /> renders with large 1`] = `
<div
  class="field field--inline field--large"
>
  <input
    class="field__input field__input--inline field__input--large"
    id="field_16"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline field__label--large"
    for="field_16"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup /> renders with small 1`] = `
<div
  class="field field--inline field--small"
>
  <input
    class="field__input field__input--inline field__input--small"
    id="field_19"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline field__label--small"
    for="field_19"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup /> renders with success 1`] = `
<div
  class="field field--inline field--success"
>
  <input
    class="field__input field__input--inline field__input--success"
    id="field_10"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline field__label--success"
    for="field_10"
  >
    Foo
  </label>
</div>
`;

exports[`<RadioGroup /> renders with touched 1`] = `
<div
  class="field field--inline field--touched field--success"
>
  <input
    class="field__input field__input--inline field__input--touched field__input--success"
    id="field_13"
    type="radio"
    value="foo"
  />
  <label
    class="field__label field__label--inline field__label--touched field__label--success"
    for="field_13"
  >
    Foo
  </label>
</div>
`;
